# bank_api

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
core/: database.py  domain_rules.py  exceptions.py  settings.py  validators.py
core/accounts/: controllers.py  models.py  routes.py  schemas.py
core/auth/: controllers.py  models.py  routes.py  schemas.py
core/database/: conf.py  controller.py
core/transactions/: controllers.py  models.py  routes.py  schemas.py
core/users/: controllers.py  models.py  routes.py  schemas.py
migrations/: env.py
migrations/versions/: 00c9a5819364_initial_migration.py
tests/: conftest.py
tests/integration/accounts/: test_account_routes.py  test_account_type_routes.py
tests/integration/auth/: test_routes.py
tests/integration/transactions/: test_transaction_routes.py
tests/integration/users/: test_user_routes.py
tests/unit/: conftest.py  test_validators.py
tests/unit/accounts/: test_account_model.py  test_account_type_model.py  test_accounts_controller.py
tests/unit/auth/: test_jwt_controller.py  test_password_controller.py  test_user_role_controller.py
tests/unit/database/: test_database_controller.py
tests/unit/transactions/: test_transaction_controller.py
tests/unit/user/: test_user_db_controller.py  test_user_model.py
tests/unit/users/: test_user_controller.py  test_user_db_controller.py  test_user_model.py
