[tool.poetry]
name = "api-de-banco"
version = "0.1.0"
description = ""
authors = ["LeandroDeJesus-S <jstleandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
sqlalchemy = "^2.0.34"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
faker = "^28.4.1"

[tool.mypy]
exclude = [
    "migrations", 
    "tests"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -x -vvv --cov=core --cov-report html"
testpaths = [
    "tests",
]

log_file = "logs/pytest-logs.log"
log_file_level = "DEBUG"
log_cli = false

asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = "session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
